--- a/DMM3U8Download/Podfile
+++ b/DMM3U8Download/Podfile
@@ -1,13 +1,15 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '8.0'
 
 target 'DMM3U8Download' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+#   use_frameworks!
 
   # Pods for DMM3U8Download
 
  pod 'GCDWebServer', '~> 3.4'
  pod 'Masonry', '~> 1.0.2'
+ pod 'AFNetworking', '~> 3.1.0'
+ pod 'SDWebImage', '~> 4.0.0'
 
 end
